CHANGE make the note even more clear

--- a/docs/de-de/modules/warenwirtschaft/pages/variations-track-stock.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/variations-track-stock.adoc
@@ -122,15 +122,13 @@ xref:warenwirtschaft:lager-einrichten.adoc#[Richte dein Lager ein], bevor du for
 
 ////
 
-[.instruction]
-Lager hinzufügen:
-
 . Öffne das Menü *Artikel » Artikel-UI » [Variante öffnen] » Element: Lager*.
 . Klicke auf *Lager hinzufügen* (icon:plus[role="darkGrey"]). +
 → Es öffnet sich ein Pop-up-Fenster.
 . Wähle das Lager aus, das du verknüpfen möchtest.
 . Klicke auf *Übernehmen*. +
 → Die Daten werden als Tabelle dargestellt.
+. Nimm weitere Einstellungen bei Bedarf vor.
 . *Speichere* (icon:save[set=plenty, role="darkGrey"]) die Einstellungen.
 
 ////
@@ -184,15 +182,17 @@ Der Maximalbestand wird für den Bestellmengenvorschlag berücksichtigt, sodass 
 |Gib einen Bestandspuffer ein.
 Dies bewirkt, dass der Bestand für bestimmte Marktplätze um den eingetragenen Wert reduziert wird.
 
-*_Hinweis_*:
-Hier eingetragene Werte gelten für die Marktplätze xref:maerkte:amazon-einrichten.adoc#[Amazon] und xref:maerkte:shopgate.adoc#[Shopgate].
-Die Werte sind gegenüber den hinterlegten Bestandspufferwerten dieser Marktplätze dominant.
-Bei anderen Marktplätzen, die nicht hier aufgeführt sind, haben die Bestandspuffer-Einstellungen des jeweiligen Marktplatzes Vorrang vor dieser Einstellung.
-
 *_Beispiel_*: Der Artikel hat einen Bestand von 50.
 Du möchtest einen Bestandspuffer von 10 Artikeln, damit der Artikel nicht vollständig über den Marktplatz abverkauft wird.
 Dazu gibst du 10 als Bestandspuffer ein.
 Zum Marktplatz wird dann ein Bestandswert von 40 übertragen.
+
+*_Hinweis_*:
+
+* Hier eingetragene Werte gelten nur für die Marktplätze xref:maerkte:amazon-einrichten.adoc#[Amazon] und xref:maerkte:shopgate.adoc#[Shopgate].
+Die Werte sind gegenüber den hinterlegten Bestandspufferwerten dieser Marktplätze dominant.
+* Bei allen anderen Marktplätzen ist diese Einstellung irrelevant.
+Hier haben die Bestandspuffer-Einstellungen des jeweiligen Marktplatzes Vorrang.
 
 | Charge
 |Wähle, ob für die Variante und das Lager die Charge der Produkte erfasst werden soll.
