--- a/docs/de-de/modules/crm/pages/emailbuilder.adoc
+++ b/docs/de-de/modules/crm/pages/emailbuilder.adoc
@@ -150,7 +150,7 @@ Erstelle Ordner, um später eine bessere Übersicht über deine E-Mail-Vorlagen 
 Ordner erstellen:
 
 . Öffne das Menü *CRM » EmailBuilder (Testphase)*.
-. Klicke unten links auf icon:ad[set=material] *Neuer Hauptordner*. +
+. Klicke unten links auf icon:add[set=material] *Neuer Hauptordner*. +
 → Das Fenster *Neuen Ordner erstellen* wird geöffnet.
 . Gib den Namen für den Ordner ein.
 . Klicke auf *Speichern*. +
