--- a/docs/de-de/modules/crm/pages/emailbuilder.adoc
+++ b/docs/de-de/modules/crm/pages/emailbuilder.adoc
@@ -612,7 +612,7 @@ In einer Standardvorlage sind neben dem Inhalt der E-Mail bereits der Name der V
 [TIP]
 .Zwischen mehreren Vorlagen hin- und herwechseln
 ====
-Wenn du später mehrere Vorlagen zur selben Zeit im Editor bearbeitest, kannst du über die Navigation zwischen den einzelnen Vorlagen hin- und herwechseln. Mit einem Klick auf *Konfiguration* gelangst du wieder in den Ordnerbaum. Dort ist dann automatisch die Vorlage geöffnet, die du zuletzt geöffnet hattest.
+Wenn du später mehrere Vorlagen zur selben Zeit im Editor bearbeitest, kannst du über die Navigation auf der linken Seiten zwischen den einzelnen Vorlagen hin- und herwechseln. Mit einem Klick auf icon:account_tree[set=material] *Konfiguration* gelangst du wieder in den Ordnerbaum. Dort ist dann automatisch die Vorlage geöffnet, die du zuletzt geöffnet hattest. Schließe geöffnete Vorlagen mit einem Klick auf icon:close[set=material].
 ====
 
 [[image-emailbuilder-example-default-template]]
@@ -755,7 +755,7 @@ Die folgende Handlungsanleitung beschreibt, wie du allgemein Vorlagen bearbeites
 [TIP]
 .Zwischen mehreren Vorlagen hin- und herwechseln
 ====
-Wenn du später mehrere Vorlagen zur selben Zeit im Editor bearbeitest, kannst du über die Navigation zwischen den einzelnen Vorlagen hin- und herwechseln. Mit einem Klick auf *Konfiguration* gelangst du wieder in den Ordnerbaum. Dort ist dann automatisch die Vorlage geöffnet, die du zuletzt geöffnet hattest.
+Wenn du später mehrere Vorlagen zur selben Zeit im Editor bearbeitest, kannst du über die Navigation auf der linken Seiten zwischen den einzelnen Vorlagen hin- und herwechseln. Mit einem Klick auf icon:account_tree[set=material] *Konfiguration* gelangst du wieder in den Ordnerbaum. Dort ist dann automatisch die Vorlage geöffnet, die du zuletzt geöffnet hattest. Schließe geöffnete Vorlagen mit einem Klick auf icon:close[set=material].
 ====
 
 [.instruction]
@@ -912,7 +912,7 @@ Die verfügbaren Variablen für den EmailBuilder sind in die folgenden Kategorie
 * <<#variablen-newsletter, Newsletter>>
 
 [#variablen-auftrag]
-==== Auftragsvariablen allgemein
+==== Variablen: Auftrag allgemein
 
 [[table-variables-order-order]]
 .Variablen in der Kategorie *Auftrag*
@@ -1102,7 +1102,7 @@ Der QR-Code wird in der E-Mail an deine Kund:innen als URL ausgegeben. Nach eine
 
 
 [#variablen-auftrag-lieferadresse]
-==== Variablen Auftrag / Lieferadresse
+==== Variablen: Auftrag / Lieferadresse
 
 [[table-variables-order-delivery-address]]
 .Variablen in der Unterkategorie *Auftrag / Lieferadresse*
@@ -1164,7 +1164,7 @@ Der QR-Code wird in der E-Mail an deine Kund:innen als URL ausgegeben. Nach eine
 |====
 
 [#variablen-auftrag-rechnungsadresse]
-==== Variablen Auftrag / Rechnungsadresse
+==== Variablen: Auftrag / Rechnungsadresse
 
 [[table-variables-order-invoice-address]]
 .Variablen in der Unterkategorie *Auftrag / Rechnungsadresse*
@@ -1227,7 +1227,7 @@ Der QR-Code wird in der E-Mail an deine Kund:innen als URL ausgegeben. Nach eine
 
 
 [#variablen-auftrag-auftragspositionen]
-==== Variablen Auftrag / Auftragspositionen (nur für Artikellisten-Widget)
+==== Variablen: Auftrag / Auftragspositionen (nur für Artikellisten-Widget)
 
 [[table-variables-order-order-items]]
 .Variablen in der Unterkategorie *Auftrag / Auftragspositionen (nur für Artikellisten-Widget)*
@@ -1496,7 +1496,7 @@ Der QR-Code wird in der E-Mail an deine Kund:innen als URL ausgegeben. Nach eine
 
 
 [#variablen-auftrag-versand]
-==== Variablen Auftrag / Versand
+==== Variablen: Auftrag / Versand
 
 [[table-variables-order-shipping]]
 .Variablen in der Unterkategorie *Auftrag / Versand*
@@ -1567,7 +1567,7 @@ Der QR-Code wird in der E-Mail an deine Kund:innen als URL ausgegeben. Nach eine
 |====
 
 [#variablen-kontakt-allgemein]
-==== Variablen Kontakt allgemein
+==== Variablen: Kontakt allgemein
 
 [[table-variables-order-contact]]
 .Variablen in der Kategorie *Kontakt*
@@ -1670,7 +1670,7 @@ Im Kontaktdatensatz wird zusätzlich zum Datum im Format `tt-mm-jjjj` der Zeitst
 |====
 
 [#variablen-kontakt-lieferadresse]
-==== Variablen Kontakt / Lieferadresse
+==== Variablen: Kontakt / Lieferadresse
 
 [[table-variables-order-contact-delivery-address]]
 .Variablen in der Unterkategorie *Kontakt / Lieferadresse*
@@ -1729,7 +1729,7 @@ Im Kontaktdatensatz wird zusätzlich zum Datum im Format `tt-mm-jjjj` der Zeitst
 |====
 
 [#variablen-kontakt-rechnungsadresse]
-==== Variablen Kontakt / Rechnungsadresse
+==== Variablen: Kontakt / Rechnungsadresse
 
 [[table-variables-order-contact-invoice-address]]
 .Variablen in der Unterkategorie *Kontakt / Rechnungsadresse*
@@ -1788,7 +1788,7 @@ Im Kontaktdatensatz wird zusätzlich zum Datum im Format `tt-mm-jjjj` der Zeitst
 |====
 
 [#variablen-kontakt-optionen]
-==== Variablen Kontakt / Optionen
+==== Variablen: Kontakt / Optionen
 
 [[table-variables-order-contact-options]]
 .Variablen in der Unterkategorie *Kontakt / Optionen*
@@ -1832,7 +1832,7 @@ Im Kontaktdatensatz wird zusätzlich zum Datum im Format `tt-mm-jjjj` der Zeitst
 |====
 
 [#variablen-global]
-==== Variablen Global
+==== Variablen: Global
 
 [[table-variables-global]]
 .Variablen in der Kategorie *Global*
@@ -1980,7 +1980,7 @@ Alternativ findest du die gespeicherte IBAN im Menü *Einrichtung » Einstellung
 |====
 
 [#variablen-newsletter]
-==== Variablen Newsletter
+==== Variablen: Newsletter
 
 [[table-variables-newsletter]]
 .Variablen in der Kategorie *Newsletter*
