zalando payment method - DE+EN

--- a/docs/de-de/modules/maerkte/pages/zalando.adoc
+++ b/docs/de-de/modules/maerkte/pages/zalando.adoc
@@ -450,7 +450,7 @@ include::partial$link-attributes.adoc[]
 == Zahlungsart in Kundenklasse erlauben
 
 :market: Zalando
-:payment-method: Zalando Payment
+:payment-method: Zalando
 
 include::partial$zahlungsart_aktivieren.adoc[]
 
