adjust table columns

--- a/docs/de-de/modules/crm/pages/emailbuilder.adoc
+++ b/docs/de-de/modules/crm/pages/emailbuilder.adoc
@@ -229,7 +229,7 @@ In den folgenden Unterkapiteln erfährst du, wie du Vorlagen für <<#header-erst
 
 Die Widgets und Variablen, die in der Vorlage enthalten sind, bilden den eigentlichen Inhalt deiner E-Mail. In einer Vorlage kannst du über die verfügbaren Widgets beliebig viele Variablen per Drag-and-drop einfügen, die dann in der E-Mail an deine Kund:innen durch den korrekten Inhalt ersetzt werden.
 
-Welche Variablen dir für deine E-Mail-Vorlagen zur Verfügung stehen, findest du in den Listen ganz unten auf dieser Seite im Kapitel <<#variablen-emailbuilder, Verfügbare Variablen und twig expressions für das Code-Widget und den Betreff>>.
+Welche Variablen dir für deine E-Mail-Vorlagen zur Verfügung stehen, findest du in den Listen ganz unten auf dieser Seite im Kapitel <<#variablen-emailbuilder, Verfügbare Variablen und twig expressions>>.
 
 [#vorlage-header-footer]
 === Vorlagen für Header und Footer erstellen
@@ -916,7 +916,7 @@ Die verfügbaren Variablen für den EmailBuilder sind in die folgenden Kategorie
 
 [[table-variables-order-order]]
 .Variablen in der Kategorie *Auftrag*
-[cols="2,5,2"]
+[cols="2,4,3"]
 |====
 |Name der Variable |Erläuterung |Twig expression
 
@@ -1231,7 +1231,7 @@ Der QR-Code wird in der E-Mail an deine Kund:innen als URL ausgegeben. Nach eine
 
 [[table-variables-order-order-items]]
 .Variablen in der Unterkategorie *Auftrag / Auftragspositionen (nur für Artikellisten-Widget)*
-[cols="2,5,2"]
+[cols="2,4,3"]
 |====
 |Name der Variable |Erläuterung |Twig expression
 
@@ -1836,7 +1836,7 @@ Im Kontaktdatensatz wird zusätzlich zum Datum im Format `tt-mm-jjjj` der Zeitst
 
 [[table-variables-global]]
 .Variablen in der Kategorie *Global*
-[cols="2,5,2"]
+[cols="2,4,3"]
 |====
 |Name der Variable |Erläuterung |Twig expression
 
