--- a/docs/de-de/modules/maerkte/pages/zalando.adoc
+++ b/docs/de-de/modules/maerkte/pages/zalando.adoc
@@ -418,7 +418,7 @@ include::partial$verkaufspreis-festlegen.adoc[]
 === Zahlungsart in Kundenklasse erlauben
 
 :market: Zalando
-:payment-method: Zalando Payment
+:payment-method: Zalando
 
 include::partial$zahlungsart_aktivieren.adoc[]
 
