--- a/docs/de-de/modules/maerkte/partials/mirakl-creating-properties.adoc
+++ b/docs/de-de/modules/maerkte/partials/mirakl-creating-properties.adoc
@@ -39,14 +39,14 @@ Für jede Variante muss ein Versandprofil-Code an {market} exportiert werden. Ve
 
 :property: Logistikklasse
 
-include::properties:page$properties-creation.adoc[]
+include::page$properties-creation.adoc[]
 
 :property: Logistikklasse
 :property-area: Artikel
 :property-type: Text
 :property-name: {market} Logistikklasse
 
-include::properties:page$properties-creation-table.adoc[]
+include::page$properties-creation-table.adoc[]
 endif::mediamarkt[]
 
 ifdef::mediamarkt[]
@@ -58,7 +58,7 @@ Du kannst für jede Variante die Versandvorlaufzeit angeben. Die Versandvorlaufz
 
 :property: Versandvorlaufzeit
 
-include::properties:page$properties-creation.adoc[]
+include::page$properties-creation.adoc[]
 
 :property: Versandvorlaufzeit
 :property-area: Artikel
