--- a/docs/de-de/modules/maerkte/pages/amazon-prime-auftraege.adoc
+++ b/docs/de-de/modules/maerkte/pages/amazon-prime-auftraege.adoc
@@ -16,7 +16,7 @@ Damit Amazon Prime-Aufträge bearbeitet werden können, müssen bestimmte Inform
 [#4300]
 == Amazon Prime-Aufträge filtern
 
-Im Menü *Aufträge » Aufträge bearbeiten* werden alle deine Aufträge angezeigt. Diese Aufträge kannst du über xref:auftraaege:auftraege-verwalten.adoc#1300[Filter] eingrenzen und zum Beispiel nur Amazon Prime-Aufträge anzeigen lassen.
+Im Menü *Aufträge » Aufträge bearbeiten* werden alle deine Aufträge angezeigt. Diese Aufträge kannst du über xref:auftraege:auftraege-verwalten.adoc#1300[Filter] eingrenzen und zum Beispiel nur Amazon Prime-Aufträge anzeigen lassen.
 
 Innerhalb des Filters *Amazon* stehen dir zehn Optionen zur Auswahl:
 
