--- a/docs/de-de/modules/maerkte/partials/mirakl-creating-properties.adoc
+++ b/docs/de-de/modules/maerkte/partials/mirakl-creating-properties.adoc
@@ -65,7 +65,7 @@ include::page$properties-creation.adoc[]
 :property-type: Ganze Zahl
 :property-name: {market} Versandvorlaufzeit
 
-include::properties:page$properties-creation-table.adoc[]
+include::page$properties-creation-table.adoc[]
 endif::mediamarkt[]
 
 [#weitere-eigenschaften]
