FIX include path that was broken from antora

--- a/docs/de-de/modules/artikel/pages/verfuegbarkeit.adoc
+++ b/docs/de-de/modules/artikel/pages/verfuegbarkeit.adoc
@@ -119,7 +119,7 @@ Wenn du die Verfügbarkeit für viele Varianten speichern möchtest, dann empfie
 [discrete]
 ===== Varianten-Gruppenfunktion
 
-include::import-export-anlage:page$massenbearbeitung.adoc[tag=varianten-gruppenfunktion]
+include::page$massenbearbeitung.adoc[tag=varianten-gruppenfunktion]
 
 . Aktiviere die Option mit den Symbolen 1-10 (icon:check-square[role="blue"]) und wähle die passende Verfügbarkeitsstufe (icon:dot-circle-o[role="blue"]).
 . Klicke auf icon:execute[set=plenty, role="darkGrey"] *Ausführen*, um die Einstellungen an den Varianten vorzunehmen.
@@ -127,7 +127,7 @@ include::import-export-anlage:page$massenbearbeitung.adoc[tag=varianten-gruppenf
 [discrete]
 ===== Stapelverarbeitung
 
-include::import-export-anlage:page$massenbearbeitung.adoc[tag=varianten-stapelverarbeitung]
+include::page$massenbearbeitung.adoc[tag=varianten-stapelverarbeitung]
 
 . Aktiviere rechts die Option mit den Symbolen 1-10 (icon:check-square[role="blue"]) und wähle die passende Verfügbarkeitsstufe (icon:dot-circle-o[role="blue"]).
 . Klicke auf icon:execute[set=plenty, role="darkGrey"] *Anwenden*, um die Einstellungen an den Varianten vorzunehmen.
