--- a/docs/en-gb/modules/item/pages/availability.adoc
+++ b/docs/en-gb/modules/item/pages/availability.adoc
@@ -119,7 +119,7 @@ If you want to save the availability for lots of variations, then it makes sense
 [discrete]
 ===== Variation group function
 
-include::import-export-create:page$mass-processing.adoc[tag=variation-group-function]
+include::page$mass-processing.adoc[tag=variation-group-function]
 
 . Activate the option with the symbols 1-10 (icon:check-square[role="blue"]) and select the appropriate availability level (icon:dot-circle-o[role="blue"]).
 . Click on icon:execute[set=plenty, role="darkGrey"] *Execute* to apply the settings to the variations.
@@ -127,7 +127,7 @@ include::import-export-create:page$mass-processing.adoc[tag=variation-group-func
 [discrete]
 ===== Batch processing
 
-include::import-export-create:page$mass-processing.adoc[tag=variation-batch-processing]
+include::page$mass-processing.adoc[tag=variation-batch-processing]
 
 . On the right, activate the option with the symbols 1-10 (icon:check-square[role="blue"]) and select the appropriate availability level (icon:dot-circle-o[role="blue"]).
 . Click on icon:execute[set=plenty, role="darkGrey"] *Apply* to apply the settings to the variations.
