update anchor for tables - DE

--- a/docs/de-de/modules/maerkte/partials/netto-recommended-mappings.adoc
+++ b/docs/de-de/modules/maerkte/partials/netto-recommended-mappings.adoc
@@ -1,4 +1,4 @@
-[[recommended-mappings]]
+[[table-recommended-mappings]]
 [cols="2,1,4a"]
 |====
 |Marktplatz-Datenfeld |Pflicht? |Empfohlene plentymarkets Zuordnung
