--- a/docs/de-de/modules/maerkte/partials/basicpricesearchengine-recommended-mappings.adoc
+++ b/docs/de-de/modules/maerkte/partials/basicpricesearchengine-recommended-mappings.adoc
@@ -1,4 +1,4 @@
-[[recommended-mappings]]
+[[table-recommended-mappings]]
 [cols="1,3a"]
 |====
 |Marktplatz-Datenfeld |Empfohlene plentymarkets Zuordnung
