--- a/docs/de-de/modules/maerkte/partials/beezup-recommended-mappings.adoc
+++ b/docs/de-de/modules/maerkte/partials/beezup-recommended-mappings.adoc
@@ -1,5 +1,5 @@
 
-[[recommended-mappings]]
+[[table-recommended-mappings]]
 [cols="2,1,4a"]
 |====
 |Marktplatz-Feld |Pflicht? |Empfohlene plentymarkets Zuordnung
