--- a/docs/de-de/modules/maerkte/partials/belboon-recommended-mappings.adoc
+++ b/docs/de-de/modules/maerkte/partials/belboon-recommended-mappings.adoc
@@ -1,4 +1,4 @@
-[[recommended-mappings]]
+[[table-recommended-mappings]]
 [cols="2,1,4a"]
 |====
 |Marktplatz-Feld |Pflicht? |Empfohlene plentymarkets Zuordnung
@@ -106,5 +106,5 @@ _oder_
 
 | Grundpreis
 | nein
-| * *Grundpreis* 
+| * *Grundpreis*
 |====
