--- a/docs/de-de/modules/maerkte/partials/billiger-de-recommended-mappings.adoc
+++ b/docs/de-de/modules/maerkte/partials/billiger-de-recommended-mappings.adoc
@@ -1,4 +1,4 @@
-[[recommended-mappings]]
+[[table-recommended-mappings]]
 [cols="2,1,4a"]
 |====
 |Marktplatz-Feld |Pflicht? |Empfohlene plentymarkets Zuordnung
@@ -186,7 +186,7 @@ _oder:_
 * *Bestand »* 1 oder mehrere Lager
 
 | Variantennummer
-| 
+|
 | Dieses Datenfeld wird automatisch zugeordnet.
 // Wird für interne Zwecke genutzt, z.B. um die Variante bei Fehlern im Log zuordnen zu können oder wenn andere Felder nicht zugeordnet sind.
 |====
