--- a/docs/de-de/modules/maerkte/partials/guenstiger-de-recommended-mappings.adoc
+++ b/docs/de-de/modules/maerkte/partials/guenstiger-de-recommended-mappings.adoc
@@ -1,4 +1,4 @@
-[[recommended-mappings]]
+[[table-recommended-mappings]]
 [cols="2,1,4a"]
 |====
 |Marktplatz-Feld |Pflicht? |Empfohlene plentymarkets Zuordnung
@@ -56,7 +56,7 @@ _oder_
 
 | Lieferzeit
 | nein
-| 
+|
 
 | Versandkosten
 | nein
