--- a/docs/de-de/modules/maerkte/partials/kauflux-recommended-mappings.adoc
+++ b/docs/de-de/modules/maerkte/partials/kauflux-recommended-mappings.adoc
@@ -1,4 +1,4 @@
-[[recommended-mappings]]
+[[table-recommended-mappings]]
 [cols="2,1,4a"]
 |====
 |Marktplatz-Feld|Pflicht? |Empfohlene plentymarkets Zuordnung
@@ -94,11 +94,11 @@ _oder_
 
 | Kategorie
 | empfohlen
-| * *Standardkategorie » Kategorie-Name*, Sprache *Deutsch* 
+| * *Standardkategorie » Kategorie-Name*, Sprache *Deutsch*
 
 | Shop-Aktion
 | nein
-| 
+|
 
 | Cross-Selling
 | nein
