--- a/docs/de-de/modules/maerkte/partials/limango-recommended-mappings.adoc
+++ b/docs/de-de/modules/maerkte/partials/limango-recommended-mappings.adoc
@@ -1,4 +1,4 @@
-[[recommended-mappings]]
+[[table-recommended-mappings]]
 [cols="2a,6a,2a"]
 |====
 |limango-Feld |Empfohlene Zuordnung / Anmerkungen | limango-Produktebene
