--- a/docs/de-de/modules/maerkte/partials/shopping-com-recommended-mappings.adoc
+++ b/docs/de-de/modules/maerkte/partials/shopping-com-recommended-mappings.adoc
@@ -1,4 +1,4 @@
-[[recommended-mappings]]
+[[table-recommended-mappings]]
 [cols="2,1,4a"]
 |====
 |Marktplatz-Feld |Pflicht? |Empfohlene plentymarkets Zuordnung
@@ -59,7 +59,7 @@ Erlaubte Werte: *Ja*, *Nein*
 
 | Verfügbarkeitsdetails
 | nein
-| 
+|
 
 | Versandkosten
 | ja
