--- a/docs/de-de/modules/maerkte/partials/twenga-recommended-mappings.adoc
+++ b/docs/de-de/modules/maerkte/partials/twenga-recommended-mappings.adoc
@@ -1,4 +1,4 @@
-[[recommended-mappings]]
+[[table-recommended-mappings]]
 [cols="2,1,4a"]
 |====
 |Marktplatz-Feld |Pflicht? |Empfohlene plentymarkets Zuordnung
@@ -98,7 +98,7 @@ _oder_
 | * *Artikel » Herstellername*
 
 | Varianten-ID
-| 
+|
 | Dieses Datenfeld wird automatisch zugeordnet.
 // Wird für interne Zwecke genutzt, z.B. um die Variante bei Fehlern im Log zuordnen zu können oder wenn andere Felder nicht zugeordnet sind.
 
