--- a/docs/de-de/modules/maerkte/pages/otto-market.adoc
+++ b/docs/de-de/modules/maerkte/pages/otto-market.adoc
@@ -292,7 +292,7 @@ Beim Export übersetzt OTTO die Werte in die Kund:innen bekannten Lieferaussagen
 [.collapseBox]
 .Lieferzeiten: Liste und Beispiele
 --
-[autowidth.stretch]
+[cols="1,3a"]
 !===
 ! *Lieferzeit*
 ! *OTTO-Lieferaussage*
@@ -440,7 +440,7 @@ image::maerkte:otto-unitprice-variation-setting.png[]
 Für die Grundpreisberechnung empfehlen wir die folgenden Zuordnungen:
 
 [cols="2,4a"]
-!===
+!====
 ! *OTTO Market- Datenfeld*
 ! *Zuordnung in plentymarkets*/ *Erläuterung*
 
@@ -513,7 +513,7 @@ usw.)
 
 * Eigenschaften des Typs *Zeichenkette*, in denen die URL zu den Dateien gespeichert wird. +
 *_Wichtig:_* Eigenschaften des Typs *Datei* können nicht verwendet werden, weil OTTO Markt nur URL verwenden kann. Jede Eigenschaft darf nur eine URL enthalten.
-!===
+!====
 
 |====
 
