--- a/docs/de-de/modules/maerkte/partials/zahlungsart_aktivieren.adoc
+++ b/docs/de-de/modules/maerkte/partials/zahlungsart_aktivieren.adoc
@@ -18,6 +18,7 @@ Zahlungsart in Kundenklasse erlauben:
 
 . Öffne das Menü *Einrichtung » CRM » Kundenklassen*.
 . Öffne die Kundenklasse, in der die Zahlungsart erlaubt werden soll.
-. Aktiviere für die Einstellung *Erlaubte Zahlungsarten* die Option *{payment-method}*.
+. Aktiviere für die Einstellung *Erlaubte Zahlungsarten* die Option *{payment-method}*. +
+ifdef::zalando[Die Zahlungsart gilt für alle Zalando-Plattformen. Ausnahme Österreich, Belgien und Schweiz: Aktiviere Zahlungsarten für diese Länder, um <<#multilingual-payment-methods, eigene Auftragsdokumente für diese Länder zu erstellen>>.]
 . Speichere (icon:save[role=green]) die Einstellungen.
 //end::mop-customer-class[]
