FIX assorted errors that land in the terminal

--- a/docs/de-de/modules/artikel/pages/attribute.adoc
+++ b/docs/de-de/modules/artikel/pages/attribute.adoc
@@ -268,7 +268,7 @@ Attribut löschen:
 == Anwendungsfälle
 
 [#600]
-==== Bilder
+=== Bilder
 
 [#800]
 [.collapseBox]
@@ -335,7 +335,7 @@ image::artikel:attributauswahl-per-bild.png[]
 --
 
 [#220]
-==== Marktplätze
+=== Marktplätze
 
 [#240]
 [.collapseBox]
@@ -381,7 +381,7 @@ TIP: Die Option *Marktplatzattributverknüpfung* ist nur sichtbar, wenn alle obe
 --
 
 [#1000]
-==== Mehrsprachigkeit
+=== Mehrsprachigkeit
 
 [#260]
 [.collapseBox]
