--- a/docs/de-de/modules/daten/pages/elasticSync-warenbestand.adoc
+++ b/docs/de-de/modules/daten/pages/elasticSync-warenbestand.adoc
@@ -44,7 +44,7 @@ include::partial$abgleich.adoc[]
 include::partial$zuordnung.adoc[]
 
 [#210]
-==== Lager-ID
+=== Lager-ID
 
 icon:warning[role="red"] [red]#Pflichtwert#
 
@@ -59,7 +59,7 @@ Das Ergebnis des Imports findest du im Backend im Menü xref:warenwirtschaft:lag
 '''
 
 [#220]
-==== Menge
+=== Menge
 
 icon:warning[role="red"] [red]#Pflichtwert#
 
@@ -74,7 +74,7 @@ Das Ergebnis des Imports findest du im Backend im Menü xref:warenwirtschaft:war
 '''
 
 [#230]
-==== Lagerort-ID
+=== Lagerort-ID
 
 icon:warning[role="red"] [red]#Pflichtwert#
 
@@ -89,7 +89,7 @@ Das Ergebnis des Imports findest du im Backend im Menü xref:warenwirtschaft:lag
 '''
 
 [#240]
-==== Mindesthaltbarkeitsdatum
+=== Mindesthaltbarkeitsdatum
 
 Gib das Mindesthaltbarketisdatum der Ware in deine CSV-Datei ein.
 
@@ -102,7 +102,7 @@ Das Ergebnis des Imports findest du im Backend im Menü xref:warenwirtschaft:mhd
 '''
 
 [#250]
-==== Charge
+=== Charge
 
 Gib die Charge des Warenbestands in deine CSV-Datei ein.
 
@@ -115,7 +115,7 @@ Das Ergebnis des Imports findest du im Backend im Menü xref:warenwirtschaft:mhd
 '''
 
 [#260]
-==== Einkaufspreis
+=== Einkaufspreis
 
 Gib den Einkaufspreis des Warenbestands in deine CSV-Datei ein. +
 *_Hinweis_*: Beim Import von negativem Warenbestand wird der Einkaufspreis nicht überschrieben.
@@ -129,7 +129,7 @@ Das Ergebnis des Imports findest du im Backend im Menü *Artikel » Artikel bear
 '''
 
 [#270]
-==== Bestandskorrekturgrund
+=== Bestandskorrekturgrund
 
 Gib den Grund für die Bestandskorrektur an.
 
@@ -138,8 +138,6 @@ Gib den Grund für die Bestandskorrektur an.
 *_Zulässige Importwerte_*: Numerisch
 
 Das Ergebnis des Imports findest du im Menü *Artikel » Artikel bearbeiten » [Artikel öffnen] » Tab: Bestand » Tab: Warenbewegung*.
-
-'''
 
 [[table-mapping-reason-stock-correction]]
 [cols="1,3"]
