--- a/docs/en-gb/modules/data/pages/elasticSync-incoming-items.adoc
+++ b/docs/en-gb/modules/data/pages/elasticSync-incoming-items.adoc
@@ -57,7 +57,7 @@ include::partial$matching.adoc[]
 include::partial$mapping.adoc[]
 
 [#210]
-==== Stock
+=== Stock
 
 icon:warning[role="red"] [red]#Required field#
 
@@ -72,7 +72,7 @@ You can find the result of the import in the back end menu xref:stock-management
 '''
 
 [#220]
-==== Storage location ID
+=== Storage location ID
 
 icon:warning[role="red"] [red]#Required field#
 
@@ -87,7 +87,7 @@ You can find the result of the import in the back end menu xref:stock-management
 '''
 
 [#230]
-==== Purchase price
+=== Purchase price
 
 Enter the purchase price into your CSV file. The purchase price refers to the net price.
 
@@ -100,7 +100,7 @@ You can find the result of the import in the back end menu xref:stock-management
 '''
 
 [#240]
-==== Warehouse ID
+=== Warehouse ID
 
 icon:warning[role="red"] [red]#Required field#
 
@@ -115,7 +115,7 @@ You can find the result of the import in the back end menu xref:stock-management
 '''
 
 [#250]
-==== Delivered on
+=== Delivered on
 
 Enter the delivery date into your CSV file.
 
@@ -128,7 +128,7 @@ You can find the result of the import in the back end menu *Stock » Incoming it
 '''
 
 [#260]
-==== Currency
+=== Currency
 
 Enter the currency into your CSV file.
 
@@ -141,7 +141,7 @@ You can find the result of the import in the back end menu xref:payment:currenci
 '''
 
 [#270]
-==== Best before
+=== Best before
 
 Enter the best before date of the item into your CSV file.
 
@@ -154,7 +154,7 @@ You can find the result of the import in the back end menu xref:stock-management
 '''
 
 [#280]
-==== Batch
+=== Batch
 
 Enter the batch into your CSV file.
 
@@ -167,7 +167,7 @@ You can find the result of the import in the back end menu xref:stock-management
 '''
 
 [#290]
-==== Supplier ID
+=== Supplier ID
 
 Enter the supplier ID into your CSV file.
 
@@ -178,7 +178,7 @@ Enter the supplier ID into your CSV file.
 '''
 
 [#300]
-==== Delivery note number
+=== Delivery note number
 
 Enter the delivery note number into your CSV file.
 
@@ -191,7 +191,7 @@ You can find the result of the import in the back end menu *Stock » Incoming it
 '''
 
 [#310]
-==== Reason for incoming items
+=== Reason for incoming items
 
 Enter the reason for incoming items.
 
@@ -201,14 +201,12 @@ Enter the reason for incoming items.
 
 You can find the result of the import in the back end menu *Item » Edit item » [open item] » tab: Stock » tab: Item movement*.
 
-'''
-
 [[table-mapping-reason-incoming-items]]
 [cols="1,3"]
 |====
 |Permitted import values in CSV file |Reason for incoming items
 
-2+^|Reason for the import of positive quantities
+2+^| *Reason for the import of positive quantities*
 
 |`100`
 |Incoming items
@@ -267,7 +265,7 @@ You can find the result of the import in the back end menu *Item » Edit item »
 |`182`
 |Incoming items found source
 
-2+^|Reason for the import of negative quantities
+2+^| *Reason for the import of negative quantities*
 
 |`200`
 |Outgoing items
