--- a/docs/en-gb/modules/data/pages/elasticSync-stock.adoc
+++ b/docs/en-gb/modules/data/pages/elasticSync-stock.adoc
@@ -44,7 +44,7 @@ include::partial$matching.adoc[]
 include::partial$mapping.adoc[]
 
 [#210]
-==== Warehouse ID
+=== Warehouse ID
 
 icon:warning[role="red"] [red]#Required field#
 
@@ -59,7 +59,7 @@ You can find the result of the import in the back end menu xref:stock-management
 '''
 
 [#220]
-==== Quantity
+=== Quantity
 
 icon:warning[role="red"] [red]#Required field#
 
@@ -74,7 +74,7 @@ You can find the result of the import in the back end menu xref:stock-management
 '''
 
 [#230]
-==== Storage location ID
+=== Storage location ID
 
 icon:warning[role="red"] [red]#Required field#
 
@@ -89,7 +89,7 @@ You can find the result of the import in the back end menu xref:stock-management
 '''
 
 [#240]
-==== Best before
+=== Best before
 
 Enter the best before date of the item into your CSV file.
 
@@ -102,7 +102,7 @@ You can find the result of the import in the back end menu xref:stock-management
 '''
 
 [#250]
-==== Batch
+=== Batch
 
 Enter the batch of the stock into your CSV file.
 
@@ -115,7 +115,7 @@ You can find the result of the import in the back end menu xref:stock-management
 '''
 
 [#260]
-==== Purchase price
+=== Purchase price
 
 Enter the purchase price of the stock into your CSV file. +
 *_Note_*: When importing negative stock, the purchase price is not overwritten.
@@ -129,7 +129,7 @@ You can find the result of the import in the back end menu *Item » Edit item »
 '''
 
 [#270]
-==== Reason for stock correction
+=== Reason for stock correction
 
 Enter the reason for the stock correction.
 
@@ -138,8 +138,6 @@ Enter the reason for the stock correction.
 *_Permitted import values_*: Numeric
 
 You can find the result of the import in the back end menu *Item » Edit item » [open item] » tab: Stock » tab: Item movement*.
-
-'''
 
 [[table-mapping-reason-stock-correction]]
 [cols="1,3"]
