--- a/docs/en-gb/modules/item/pages/attributes.adoc
+++ b/docs/en-gb/modules/item/pages/attributes.adoc
@@ -268,7 +268,7 @@ Deleting an attribute:
 == Use cases
 
 [#600]
-==== Images
+=== Images
 
 [#800]
 [.collapseBox]
@@ -335,7 +335,7 @@ image::item:attribute-selection-via-image.png[]
 --
 
 [#220]
-==== Markets
+=== Markets
 
 [#240]
 [.collapseBox]
@@ -381,7 +381,7 @@ TIP: The option *Market attribute link* is only visible if you have met all of t
 --
 
 [#1000]
-==== Multilingualism
+=== Multilingualism
 
 [#260]
 [.collapseBox]
