--- a/docs/de-de/modules/daten/pages/praxisbeispiel-elasticsync-lagerorte.adoc
+++ b/docs/de-de/modules/daten/pages/praxisbeispiel-elasticsync-lagerorte.adoc
@@ -49,26 +49,20 @@ Im folgenden Abschnitt legen wir beispielhaft eine Vorlage für Lagerort und som
 |Hier können Notizen zum Lagerort vermerkt werden.
 |===
 
-[[bild-daten-importieren]]
 .Datenfelder in der Lagerstruktur
 image::daten:datenfelder-in-der-lagerstruktur.png[]
 
-[[bild-daten-importieren]]
 .Datenfelder im Strukturmanager
 image::daten:datenfelder-im-strukturmanager.png[]
 
-[[bild-daten-importieren]]
 .StorageLocation Datenfelder im Strukturmanager
 image::daten:storagelocation-datenfelder-strukturmanager.png[]
 
 In unserem Beispiel legen wir im FormatDesigner einen Import vom Typ Warehouse an und vergeben als Namen warehouseLocation.
 
-[[bild-daten-importieren]]
 .Neue Vorlage
 image::daten:neue-vorlage.png[]
 
-Datenfelder WarehouseLocation
-[[bild-daten-importieren]]
 .Datenfelder WarehouseLocation
 image::daten:datenfelder-warehouselocation.png[]
 
@@ -77,7 +71,6 @@ Durch Anklicken werden die Datenfelder zur Vorlage hinzugefügt. +
 
 Daraus ergibt sich im FormatDesigner die folgende Zuweisung.
 
-[[bild-daten-importieren]]
 .Zuweisung der Datenfelder
 image::daten:zuweisung-der-datenfelder.png[]
 
@@ -129,13 +122,11 @@ Je nach gewählter Option erscheinen unterschiedliche Einstellungsmöglichkeiten
 |Für den Filter wird hier die Option Lager gewählt.
 |===
 
-[[bild-daten-importieren]]
 .Das Formular
 image::daten:das-formular.png[]
 
 In der Tabelle sehen die Daten aus wie folgt.
 
-[[bild-daten-importieren]]
 .Die Daten
 image::daten:die-daten.png[]
 
@@ -143,7 +134,6 @@ image::daten:die-daten.png[]
 
 In einem nächsten Schritt werden die Daten bearbeitet. Die per Elastischem Export erstellte CSV-Datei kann in einem Tabellenkalkulationsprogramm geöffnet werden.
 
-[[bild-daten-importieren]]
 .Daten CSV-Datei unbearbeitet
 image::daten:daten-csv-datei-unbearbeitet.png[]
 
@@ -151,7 +141,6 @@ Dort können die Datenfelder Level, Label, Verwendungszweck, Status, Position, T
 
 In dem hier aufgeführten Beispiel wurden die Werte der Position und der Notizen verändert.
 
-[[bild-daten-importieren]]
 .Daten CSV-Datei bearbeitet
 image::daten:daten-csv-datei-bearbeitet.png[]
 
@@ -190,21 +179,17 @@ Nun kommen wir zum Datenimport über das Import-Tool. Im folgenden Abschnitt leg
 In diesem Beispiel wird der Datei-Upload verwendet, der bald als eigenes Optionsfeld vorhanden sein wird.
 |===
 
-[[bild-daten-importieren]]
 .Auswahl des Typs
 image::daten:auswahl-des-typs.png[]
 
-[[bild-daten-importieren]]
 .Trennzeichen
 image::daten:trennzeichen.png[]
 
-[[bild-daten-importieren]]
 .Quelle
 image::daten:quelle.png[]
 
-[[bild-daten-importieren]]
 .Grunddaten im Überblick
-image::daten/daten-importieren/assets/grunddaten-im-überblick.png[]
+image::daten:grunddaten-im-überblick.png[]
 
 Anschließend folgt der Datei-Upload. Für den Datei-Upload verwenden wir eine lokale CSV-Datei. In diesem Fall wird als Quelle HTTP und als HTTP-Option der Datei-Upload gewählt.
 
@@ -217,15 +202,12 @@ Anschließend folgt der Datei-Upload. Für den Datei-Upload verwenden wir eine l
 → Die Datei wird in das Quellverzeichnis geladen.
 . *Speichere* (icon:save[role="green"]) die Einstellungen.
 
-[[bild-daten-importieren]]
 .Datei-Upload
 image::daten:datei-upload.png[]
 
-[[bild-daten-importieren]]
 .Datei wählen
-image::daten/daten-importieren/assets/datei-wählen.png[]
+image::daten:datei-wählen.png[]
 
-[[bild-daten-importieren]]
 .Datei wird in das Quellverzeichnis geladen
 image::daten:datei-wird-in-das-quellverzeichnis-geladen.png[]
 
@@ -233,22 +215,19 @@ image::daten:datei-wird-in-das-quellverzeichnis-geladen.png[]
 
 Für den Abgleich müssen die Daten festgelegt und zugeordnet werden, um festzustellen, welche Daten der Datei welchen Daten in plentymarkets entsprechen.
 
-[[bild-daten-importieren]]
 .Abgleich
 image::daten:abgleich.png[]
 
 Mit dem Abgleich legst du fest, anhand welcher Daten untersucht werden soll, ob bereits ein Datensatz besteht oder nicht. +
 In diesem Beispiel wird die Warehouse Location ID für den Abgleich verwendet.
 
-[[bild-daten-importieren]]
 .Abgleich wählen
-image::daten/daten-importieren/assets/abgleich-wählen.png[]
+image::daten:abgleich-wählen.png[]
 
 === Importoptionen
 
 Hier wird festgelegt, ob nur neue, nur bestehende oder sowohl neue als auch bestehende Daten importiert werden sollen.
 
-[[bild-daten-importieren]]
 .Importoptionen
 image::daten:importoptionen.png[]
 
@@ -258,7 +237,6 @@ image::daten:importoptionen.png[]
 
 Bei der Zuordnung werden die importierten Daten den plentymarkets Datenfelder zugewiesen.
 
-[[bild-daten-importieren]]
 .Zuordnung
 image::daten:zuordnung.png[]
 
@@ -281,13 +259,11 @@ Die zu importierenden Daten müssen den Datenfeldern in plentymarkets zugewiesen
 . Klicke auf *Zeile aktivieren*, um die Importdaten zu aktivieren.
 . *Speichere* (icon:save[role="green"]) die Einstellungen.
 
-[[bild-daten-importieren]]
 .Datenfelder zuweisen
 image::daten:datenfelder-zuweisen.png[]
 
 Klicke auf *Vorschau* (icon:eye[role="blue"]), um die Änderungen der ersten Zeilen anzuzeigen.
 
-[[bild-daten-importieren]]
 .Vorschau
 image::daten:vorschau.png[]
 
@@ -295,20 +271,17 @@ image::daten:vorschau.png[]
 
 Mit Klick auf *Import testen* wird geprüft, ob die Eingaben zu einem erfolgreichen Ablauf des Imports führen.
 
-[[bild-daten-importieren]]
 .Import testen
 image::daten:sync-testen.png[]
 
 Mit Klick auf *Import ausführen* wird der Import gestartet und in die Queue geladen.
 
-[[bild-daten-importieren]]
 .Import ausführen
-image::daten/daten-importieren/assets/sync-ausführen.png[]
+image::daten:sync-ausführen.png[]
 
 === Das Ergebnis im Struktur-Manager
 
 Im Struktur-Manager wird das Ergebnis wie folgt angezeigt.
 
-[[bild-daten-importieren]]
 .Anzeige im Struktur-Manager
 image::daten:anzeige-im-struktur-manager.png[]
