--- a/docs/de-de/modules/maerkte/pages/zalando.adoc
+++ b/docs/de-de/modules/maerkte/pages/zalando.adoc
@@ -77,7 +77,7 @@ Hier siehst du eine Übersicht der Schritte, die dich erwarten.
 . <<#link-zDirect, Bitte unseren Support, dein Konto mit deinem zDirect-Konto zu verknüpfen.>> +
 *_Wichtig:_* Das geht erst, nachdem du den Assistenten zum ersten Mal durchlaufen hast.
 . <<#assistant-2, Durchlaufe den Assistenten *Kontoeinstellungen - Zalando* noch einmal, um die fehlenden Einstellungen vorzunehmen.>>
-. <<#more-setup, Nimm die weiteren Einstellungen vor.>>
+. <<#more-setup, Nimm die weitere Einrichtung vor.>>
 . <<#order-documents, Bereite die Auftragsdokumente vor.>>
 . <<#prepare-variations, Bereite deine Varianten vor.>>
 . <<#1200-1, Automatisiere die Auftragsabwicklung.>>
@@ -380,7 +380,7 @@ Du hast die Einrichtung noch nicht abgeschlossen. Aktiviere das Zalando-Konto de
 --
 
 [#more-setup]
-== Weitere Einstellungen vornehmen
+== Weitere Einrichtung vornehmen
 
 [#400]
 === Kategorien verknüpfen
@@ -413,14 +413,6 @@ include::partial$auftragsherkunft-aktivieren.adoc[]
 :referrer-price: Zalando
 
 include::partial$verkaufspreis-festlegen.adoc[]
-
-[#800]
-=== Zahlungsart in Kundenklasse erlauben
-
-:market: Zalando
-:payment-method: Zalando
-
-include::partial$zahlungsart_aktivieren.adoc[]
 
 [#700]
 === Attribute mit Zalando verknüpfen
@@ -803,16 +795,17 @@ Du verkaufst schon auf Zalando, möchtest deine Produkte jetzt aber auf einer we
 
 Sobald du mit Zalando einen Vertrag über den zusätzlichen Verkaufskanal abgeschlossen hast, geht es so weiter:
 
-* Du forderst im Forum link::https://forum.plentymarkets.com/t/sammelthema-collective-thread-csv-formular-zum-abgleichen-von-artikeln-silhouetten-csv-form-for-synchronization-of-articles-silhouettes/669460[die API-Route für den neuen Verkaufskanal an.] +
+* Du forderst im Forum link:https://forum.plentymarkets.com/t/sammelthema-collective-thread-csv-formular-zum-abgleichen-von-artikeln-silhouetten-csv-form-for-synchronization-of-articles-silhouettes/669460[die API-Route für den neuen Verkaufskanal an]. +
 *_Wichtig:_* Benutzer und Kennwort sind für alle Zalando-Verkaufskanäle gleich. Zalando benötigt also nur die API-Route.
 * Du sendest dein:er Zalando-Ansprechpartner:in die neue API-Route mit der Zusatzinformation, dass alle anderen Daten vom ersten Verkaufskanal übernommen werden sollen. +
 → Zalando schaltet den neuen Verkaufskanal frei.
 * Aktiviere die Auftragsherkunft für das neue Land im Menü *Einrichtung » Aufträge » Auftragsherkunft*.
-* Erstelle einen neuen Verkaufspreis oder aktiviere die Herkunft des Verkaufskanals in einem Verkaufspreis für das Land, den es bereits in deinem System gibt.
-* Wenn du Österreich, Belgien oder Schweiz neu aktiviert hast, erlaube die Zahlungsart in den gewünschten Kundenklassen.
-* Bereite die Auftragsdokumente für den Verkaufskanal vor.
-* Aktiviere die Verfügbarkeit für das neue Land an den Varianten, die du auf dem Verkaufskanal anbieten möchtest.
+* Erstelle einen neuen Verkaufspreis. Vergiss nicht, die *Währung* und das *Land* korrekt zu speichern. Oder aktiviere die Herkunft *Zalando* in einem vorhandenen Verkaufspreis für das Land. +
+*_Wichtig:_* Aktiviere die Herkunft *Zalando*. Die Unterherkünfte für die einzelnen Zalando-Plattformen (Zalando DE, Zalando NL usw.) werden ignoriert.
+* Bereite die Auftragsdokumente für das Land vor.
 * <<#assistant-2, Durchlaufe den Assistenten, um das Land zu aktivieren und die Einstellungen für Preise und Bestände zu speichern.>>
+* Aktiviere den Verkaufspreis an den Varianten. +
+*_Wichtig:_* An den Varianten wird die Verfügbarkeit für die einzelnen Zalando-Plattformen (Zalando DE, Zalando NL usw.) ignoriert. Deshalb änderst du die Einstellungen für die Verfügbarkeit nicht.
 
 [#900]
 == Berichte herunterladen
