--- a/docs/de-de/modules/maerkte/partials/verkaufspreis-festlegen.adoc
+++ b/docs/de-de/modules/maerkte/partials/verkaufspreis-festlegen.adoc
@@ -6,7 +6,8 @@ Verkaufspreis für {referrer} festlegen:
 . Öffne das Menü *Einrichtung » Artikel » Verkaufspreise » [Verkaufspreis öffnen]*. +
 *_Tipp:_* Du hast noch keine Verkaufspreise? Dann erstelle zuerst einen xref:artikel:preise.adoc#100[neuen Verkaufspreis].
 . Wechsele in das Tab *Einstellungen*.
-. Aktiviere die Herkunft *{referrer}*.
+. Aktiviere die Herkunft *{referrer}*. +
+ifdef::zalando[*_Wichtig:_* Aktiviere die Herkunft *Zalando*. Die Unterherkünfte für die einzelnen Zalando-Plattformen (Zalando DE, Zalando NL usw.) werden ignoriert.]
 ifdef::mirakl-verkaufspreis[]
 . Aktiviere die Herkunft *Mirakl*.
 endif::mirakl-verkaufspreis[]
