--- a/docs/de-de/modules/maerkte/pages/zalando.adoc
+++ b/docs/de-de/modules/maerkte/pages/zalando.adoc
@@ -91,25 +91,24 @@ Hier siehst du eine Übersicht der Schritte, die dich erwarten.
 . <<#1500, Aktiviere dein Zalando-Konto im Assistenten, um den Datenaustausch mit Zalando zu starten.>>
 --
  
-Schritte zum Hinzufügen eines weiteren Verkaufskanals::
+Schritte, um weiteren Verkaufskanal hinzuzufügen::
 +
 --
 Du verkaufst schon auf Zalando, möchtest deine Produkte jetzt aber auf einer weiteren Länderplattform anbieten? Kein Problem.
 
 Sobald du mit Zalando einen Vertrag über den zusätzlichen Verkaufskanal abgeschlossen hast, geht es so weiter:
 
-* Du forderst im Forum link:https://forum.plentymarkets.com/t/sammelthema-collective-thread-csv-formular-zum-abgleichen-von-artikeln-silhouetten-csv-form-for-synchronization-of-articles-silhouettes/669460[die API-Route für den neuen Verkaufskanal an]. +
+. Du forderst im Forum link:https://forum.plentymarkets.com/t/sammelthema-collective-thread-csv-formular-zum-abgleichen-von-artikeln-silhouetten-csv-form-for-synchronization-of-articles-silhouettes/669460[die API-Route für den neuen Verkaufskanal an]. +
 *_Wichtig:_* Benutzer und Kennwort sind für alle Zalando-Verkaufskanäle gleich. Zalando benötigt also nur die API-Route.
-* Du sendest dein:er Zalando-Ansprechpartner:in die neue API-Route mit der Zusatzinformation, dass alle anderen Daten vom ersten Verkaufskanal übernommen werden sollen. +
+. Du sendest dein:er Zalando-Ansprechpartner:in die neue API-Route mit der Zusatzinformation, dass alle anderen Daten vom ersten Verkaufskanal übernommen werden sollen. +
 → Zalando schaltet den neuen Verkaufskanal frei.
-* Aktiviere die Auftragsherkunft für das neue Land im Menü *Einrichtung » Aufträge » Auftragsherkunft*.
-* Erstelle einen neuen Verkaufspreis. Vergiss nicht, die *Währung* und das *Land* korrekt zu speichern. Oder aktiviere die Herkunft *Zalando* in einem vorhandenen Verkaufspreis für das Land. +
+. Aktiviere die Auftragsherkunft für das neue Land im Menü *Einrichtung » Aufträge » Auftragsherkunft*.
+. Erstelle einen neuen Verkaufspreis. Vergiss nicht, die *Währung* und das *Land* korrekt zu speichern. Oder aktiviere die Herkunft *Zalando* in einem vorhandenen Verkaufspreis für das Land. +
 *_Wichtig:_* Aktiviere die Herkunft *Zalando*. Die Unterherkünfte für die einzelnen Zalando-Plattformen (Zalando DE, Zalando NL usw.) werden ignoriert.
-* Bereite die Auftragsdokumente für das Land vor.
-* Aktiviere den Verkaufspreis an den Varianten. +
+. Bereite die Auftragsdokumente für das Land vor.
+. Aktiviere den Verkaufspreis an den Varianten. +
 *_Wichtig:_* An den Varianten wird die Verfügbarkeit für die einzelnen Zalando-Plattformen (Zalando DE, Zalando NL usw.) ignoriert. Deshalb änderst du die Einstellungen für die Verfügbarkeit nicht.
-* <<#assistant-2, Durchlaufe den Assistenten, um das Land zu aktivieren und die Einstellungen für Preise und Bestände zu speichern.>>
-
+. <<#assistant-2, Durchlaufe den Assistenten, um das Land zu aktivieren und die Einstellungen für Preise und Bestände zu speichern.>>
 --
 ====
 
