--- a/docs/de-de/modules/maerkte/partials/variantenverfuegbarkeit.adoc
+++ b/docs/de-de/modules/maerkte/partials/variantenverfuegbarkeit.adoc
@@ -27,7 +27,8 @@ Eine Variante für {market-availability} verfügbar machen:
 . Wechsele in das Tab *Verfügbarkeit*.
 . Klicke im Bereich *Märkte* in das Auswahlfeld. +
 → Eine Liste mit allen verfügbaren Märkten wird angezeigt.
-. Aktiviere die Option *{option-availability}*.
+. Aktiviere die Option *{option-availability}*. +
+ifdef::zalando[*_Wichtig:_* Aktiviere die Verfügbarkeit *Zalando*. Die Verfügbarkeiten für die einzelnen Zalando-Plattformen (Zalando DE, Zalando NL usw.) werden ignoriert.]
 ifdef::mirakl-herkunft[]
 . Aktiviere die Option *Mirakl*.
 endif::mirakl-herkunft[]
@@ -69,7 +70,8 @@ include::artikel:page$massenbearbeitung.adoc[tag=varianten-gruppenfunktion]
 
 . Navigiere zum Bereich *Marktplatz-Verfügbarkeit*.
 . Aktiviere das Kontrollkästchen links neben der Option *{option-availability}*.
-. Aktiviere das Kontrollkästchen rechts neben der Option *{option-availability}*.
+. Aktiviere das Kontrollkästchen rechts neben der Option *{option-availability}*. +
+ifdef::zalando[*_Wichtig:_* Aktiviere die Verfügbarkeit *Zalando*. Die Verfügbarkeiten für die einzelnen Zalando-Plattformen (Zalando DE, Zalando NL usw.) werden ignoriert.]
 ifdef::mirakl-herkunft[]
 . Aktiviere das Kontrollkästchen links neben der Option *Mirakl*.
 . Aktiviere das Kontrollkästchen rechts neben der Option *Mirakl*.
@@ -115,7 +117,8 @@ include::artikel:page$massenbearbeitung.adoc[tag=varianten-stapelverarbeitung]
 
 . Navigiere zum Bereich *Marktplatz-Verfügbarkeit*.
 . Aktiviere das Kontrollkästchen links neben der Option *{option-availability}*.
-. Aktiviere das Kontrollkästchen rechts neben der Option *{option-availability}*.
+. Aktiviere das Kontrollkästchen rechts neben der Option *{option-availability}*. +
+ifdef::zalando[*_Wichtig:_* Aktiviere die Verfügbarkeit *Zalando*. Die Verfügbarkeiten für die einzelnen Zalando-Plattformen (Zalando DE, Zalando NL usw.) werden ignoriert.]
 ifdef::mirakl-herkunft[]
 . Aktiviere das Kontrollkästchen links neben der Option *Mirakl*.
 . Aktiviere das Kontrollkästchen rechts neben der Option *Mirakl*.
